--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>URL Shortner</title>
+    <title>URL Shortener</title>
   </head>
   <body>
     <div class="container">
