--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>URL Shortner</h1>
+      <h1>URL Shortener</h1>
       <form action="/shortUrls" method="POST" class="my-4 form-inline">
         <label for="fullUrl" class="sr-only">Url</label>
         <input
