--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,30 +31,31 @@
         <button type="submit" class="btn btn-success">Shorten</button>
       </form>
       
-      <table class="table table-striped table-responsive">
-        <thead>
-          <tr>
-            <th>URL</th>
-            <th>Short link</th>
-            <th>Alias</th>
-            <th>Clicks</th>
-            <th>Created At</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% shortUrls.forEach(shortUrl => { %>
-            <tr>
-              <td><%= shortUrl.full %></td>
-              <td><a href="/<%= shortUrl.short %>"><%= shortUrl.short %></a></td>
-              <td><a href="/<%= shortUrl.alias %>"><%= shortUrl.alias.join(", ") %></a></td>
-              <td><%= shortUrl.clicks %></td>
-              <td><%= new Date(shortUrl.createdAt).toLocaleString() %></td>
-            </tr>
-          <% }) %>
-        </tbody>
-      </table>
       <% if (shortUrls.length === 0) { %>
         <p>No URLs have been shortened yet.</p>
+      <% } else { %>
+        <table class="table table-striped table-responsive">
+          <thead>
+            <tr>
+              <th>URL</th>
+              <th>Short link</th>
+              <th>Alias</th>
+              <th>Clicks</th>
+              <th>Created At</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% shortUrls.forEach(shortUrl => { %>
+              <tr>
+                <td><%= shortUrl.full %></td>
+                <td><a href="/<%= shortUrl.short %>"><%= shortUrl.short %></a></td>
+                <td><a href="/<%= shortUrl.alias %>"><%= shortUrl.alias.join(", ") %></a></td>
+                <td><%= shortUrl.clicks %></td>
+                <td><%= new Date(shortUrl.createdAt).toLocaleString() %></td>
+              </tr>
+            <% }) %>
+          </tbody>
+        </table>
       <% } %>
     </div>
   </body>
